--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,32 @@ version: '2.1'
 
 services:
 
- user-service:
-  container_name: users-service
+ my-db:
+  container_name: my-db
+  build: ./project/db
+  ports:
+    - 5435:5432 # expose ports - HOST:CONTAINER
+  environment:
+   - POSTGRES_USER=postgres
+   - POSTGRES_PASSWORD=postgres
+  healthcheck:
+   test: exit 0
+  volmues:
+   - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+
+ blog:
+  container_name: blog
   build: .
   volumes:
     - '.:/usr/src/app'
   ports:
-    - 5001:5000 # expose ports - HOST:CONTAINER
+   - 5001:5000 # expose ports - HOST:CONTAINER
+  environment:
+   - APP_SETTINGS=project.config.DevelopmentConfig
+   - DATABASE_URL=postgres://postgres:postgres@my-db:5432/blog_dev
+   - DATBASE_TEST_URL=postgres://postgres:postgres@my-db:5432/blog_test
+  depends_on:
+   my-db:
+    condition: service_healthy
+  links:
+   - my-db
